# masson-aiogram-template

./: .dockerignore  .env.dist  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  configuration.py  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
abc/: __init__.py
abstract/: __init__.py  adapter.py  facade.py  factory.py
bot/: __main__.py  data_structure.py  dispatcher.py
bot/logic/: __init__.py  help.py  start.py
bot/middlewares/: database_md.py  role.py  translator_md.py
buildfiles/: Dockerfile  redis.conf
cache/: __init__.py  adapter.py  cache_adapter.py
db/: __init__.py  database.py  role.py
db/models/: __init__.py  base.py  chat.py  user.py
db/repositories/: __init__.py  abstract.py  chat.py  repository.py  user.py
language/: __init__.py  translator.py
language/locales/: ru.ftl
migrations/: env.py
migrations/versions/: 55b3f6f59e23_initial.py  f2ee2fc0ff90_add_fk.py
src/: configuration.py
src/bot/: __init__.py  __main__.py  data_structure.py  dispatcher.py  role.py
src/bot/logic/: __init__.py  help.py  start.py
src/bot/middlewares/: __init__.py  database_md.py  role.py  translator_md.py
src/bot/structures/: __init__.py  data_structure.py  role.py
src/cache/: __init__.py  adapter.py
src/db/: __init__.py  database.py
src/db/models/: __init__.py  base.py  chat.py  user.py
src/db/repositories/: __init__.py  abstract.py  chat.py  user.py
src/language/: __init__.py  enums.py  translator.py  translator_mode.py
src/language/locales/: ru.ftl
tests/: conftest.py  test_stairway.py
tests/integration/: __init__.py  conftest.py  test_fluent.py  test_stairway.py
tests/unit/: conftest.py  test_cache_locale.py  test_locale_scheme.py
tests/unit/test_bot/: test_help_logic.py  test_start_logic.py
tests/unit/test_cache/: test_set.py
tests/utils/: __init__.py  alembic.py  mocked_bot.py  mocked_database.py  mocked_redis.py  test_database.py  updates.py
