[tool.poetry]
name = "masson-aiogram-template"
version = "0.1.0"
description = "Scalable and functional aiogram template with SQLAlchemy and Github Actions integrations by MassonNn"
authors = ["MassonNn <ilyalyapin@duck.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "masson-aiogram-template"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0b6"
sqlalchemy = "^2.0.0"
greenlet = "^2.0.2"
asyncpg = "^0.27.0"
alembic = "^1.9.2"
fluentogram = "^1.1.6"
redis = "^4.4.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
mypy = "^1.0.1"
black = "^23.1.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
